--- a/css/media_query.css
+++ b/css/media_query.css
@@ -8,8 +8,8 @@
         background-image: url(../images/background-mobile.png);
         /* height: 100vh; */
         /* height: 100vh; */
-        background-position: center;
-        background-size: 130%;
+        background-position: center center;
+        background-size: cover;
         text-align: center;
     }
 
