--- a/css/media_query.css
+++ b/css/media_query.css
@@ -7,7 +7,7 @@
     #home {
         background-image: url(../images/background-mobile.png);
         /* height: 100vh; */
-        /* height: 100vh; */
+        height: 100vh;
         background-position: center center;
         background-size: cover;
         text-align: center;
